padding between adjacent page teasers and small fix for jump links padding on desktop

--- a/src/component-library/site-components/PageTeaser/PageTeaser.module.scss
+++ b/src/component-library/site-components/PageTeaser/PageTeaser.module.scss
@@ -2,6 +2,12 @@
 @use '../../utilities/index.module' as *;
 
 .wrapper {
+  // Add padding between adjacent page teasers regardless of theme
+  :global(:has(> .page-teaser) + *) > & {
+    padding-top: $spacing-12;
+  }
+
+  // This is to add padding to the bottom of the last page teaser in a container
   :global([data-theme]):last-child > & {
     padding-bottom: $spacing-12;
   }
